integration-test/src/main/java/org/pastalab/fray/test/fail/CountDownLatchDeadlockUnblock.java
package org.pastalab.fray.test.fail;

public class CountDownLatchDeadlockUnblock {
    public static void main(String[] args) {
        
    }
}
